// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`adding empty workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: my-workflow
on: {}
jobs: {}
"
`;

exports[`setting runName 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: run-name
run-name: This is a custom run-name
on: {}
jobs: {}
"
`;

exports[`setupTools all tools default cache to false 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: test-tools
on: {}
jobs:
  job:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - uses: actions/setup-java@v5
        with:
          distribution: corretto
          java-version: "11"
      - uses: actions/setup-node@v6
        with:
          node-version: 18.x
          package-manager-cache: false
      - uses: actions/setup-python@v6
        with:
          python-version: 3.x
      - uses: actions/setup-go@v6
        with:
          go-version: ^1.18.0
          cache: false
      - uses: actions/setup-dotnet@v5
        with:
          dotnet-version: 6.x
          cache: false
      - id: auto_584a331f
        run: echo hello
"
`;

exports[`setupTools java custom distribution 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: test-tools
on: {}
jobs:
  job:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - uses: actions/setup-java@v5
        with:
          distribution: temurin
          java-version: "17"
      - id: auto_584a331f
        run: echo hello
"
`;

exports[`setupTools python cache with packageManager 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: test-tools
on: {}
jobs:
  job:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - uses: actions/setup-python@v6
        with:
          python-version: 3.x
          cache: poetry
      - id: auto_584a331f
        run: echo hello
"
`;

exports[`setupTools tools can enable cache 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: test-tools
on: {}
jobs:
  job:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - uses: actions/setup-java@v5
        with:
          distribution: corretto
          java-version: "11"
          cache: maven
      - uses: actions/setup-node@v6
        with:
          node-version: 18.x
          package-manager-cache: true
      - uses: actions/setup-go@v6
        with:
          go-version: ^1.18.0
          cache: true
      - uses: actions/setup-dotnet@v5
        with:
          dotnet-version: 6.x
          cache: true
      - id: auto_584a331f
        run: echo hello
"
`;

exports[`workflow triggers 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: triggers
on:
  schedule:
    - cron: 5 4 * * *
  workflow_dispatch: {}
  repository_dispatch: {}
  workflow_call: {}
  branch_protection_rule: {}
  check_run: {}
  check_suite: {}
  create: {}
  delete: {}
  deployment: {}
  deployment_status: {}
  discussion: {}
  discussion_comment: {}
  fork: {}
  gollum: {}
  issue_comment: {}
  issues: {}
  label: {}
  merge_group:
    branches:
      - main
  milestone: {}
  page_build: {}
  pull_request: {}
  pull_request_review: {}
  pull_request_review_comment: {}
  pull_request_target: {}
  push: {}
  registry_package: {}
  release: {}
  status: {}
  watch: {}
  workflow_run: {}
jobs: {}
"
`;
